--- a/src/Components/PreviewModal/Footer/Footer.css
+++ b/src/Components/PreviewModal/Footer/Footer.css
@@ -1,8 +1,11 @@
-.footer{
+.receiptFooter{
     .brandDetails{
         width: 100%;
         background-color: rgb(198, 241, 249);
         text-align: center;
-        padding: 5% 0;
+        padding: 2% 0;
+    }
+    .termsAndConditions{
+        padding: 2%;
     }
 }
