--- a/src/Components/PreviewModal/PreviewModal.css
+++ b/src/Components/PreviewModal/PreviewModal.css
@@ -1,30 +1,19 @@
 .previewModal {
-    overflow: scroll;
-    border: 1px solid grey;
-    background-color: rgb(255, 255, 255);
-    margin: 3% 5%;
-    max-width: 800px;
-    overflow-x: hidden;
-    /* right: 10%;
-    bottom: 10%;
-    left: 30%; */
-    z-index: 999;
-    transition: all 0.3s;
-    .closeModalButton{
-      position: absolute;
-      right: 0;
-      margin: 10px;
-    }  
-  }
-  .profileAndInvoice{
-    display: flex;
-    justify-content: space-around;
-    background-color: gainsboro;
-  }
-  .closeModalButton{
-    opacity: 1;
-  }
-  .closeModalButton:hover{
-    border: 1px solid rgb(255, 0, 191);
-    box-shadow: 30px 30px 30px rgba(255, 255, 255, 0);
-  }
+  overflow: scroll;
+  border-color: silver;
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+  background-color: rgb(255, 255, 255);
+  padding: 1%;
+  margin: 1% 5%;
+  max-width: 90%;
+  max-height: 85vh;
+  overflow-x: hidden;
+  transition: all .5s linear;
+  flex: 1;  
+}
+.profileAndInvoice {
+  display: flex;
+  justify-content: space-around;
+  background-color: gainsboro;
+}
+
