--- a/src/common/utils/UtilIcon/UtilIcons.css
+++ b/src/common/utils/UtilIcon/UtilIcons.css
@@ -5,9 +5,10 @@
   .fullscreenIcon,
   .fullscreenIcon,
   .closeIcon {
-    border-color: #c0c0c0;
+    border: 1px solid silver;
     box-shadow: 2px 2px 0 0 rgb(1, 165, 146);
     border-radius: 8px;
+    transition: all 0.3s;
   }
   .closeIcon {
     padding: 3px;
