--- a/src/Container/ReceiptContainer.css
+++ b/src/Container/ReceiptContainer.css
@@ -1,5 +1,7 @@
 .container {
   display: flex;
   justify-content: space-around;
-  
+  align-items: center;
+  height: 95vh;
+  background-color: whitesmoke;
 }
