--- a/src/Components/PreviewModal/PreviewModal.css
+++ b/src/Components/PreviewModal/PreviewModal.css
@@ -9,6 +9,7 @@
   height: 90%;
   overflow-x: hidden;
   flex: 1;
+  font-size: 0.8rem;
 }
 .previewModal::-webkit-scrollbar-track {
   background-color: #cfcdcd;
@@ -18,7 +19,7 @@
   background-color: #dbdbdb;
 }
 .previewModal::-webkit-scrollbar-thumb {
-  background-color:darkgray
+  background-color: darkgray;
 }
 .previewModal::-webkit-scrollbar-thumb:hover {
   background-color: rgba(1, 165, 146, 0.33);
