Updation centering css

--- a/src/Components/PreviewModal/PreviewModal.css
+++ b/src/Components/PreviewModal/PreviewModal.css
@@ -4,9 +4,9 @@
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
   background-color: rgb(255, 255, 255);
   padding: 1%;
-  margin: 1% 5%;
+  margin: 5%;
   max-width: 90%;
-  height: 90%;
+  height: 88%;
   overflow-x: hidden;
   flex: 1;
   font-size: 0.8rem;
