--- a/src/Components/Form/Form.css
+++ b/src/Components/Form/Form.css
@@ -1,9 +1,7 @@
 .formPage {
   width: 35%;
-  height: 100%;
-  form {
-    margin: 5% 5%;
-  }
+  margin: auto;
+  padding-left: 2%;
   table {
     tr {
       th {
