--- a/src/Container/ReceiptContainer.css
+++ b/src/Container/ReceiptContainer.css
@@ -1,6 +1,6 @@
 .container {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   height: 95vh;
   background-color: whitesmoke;
