--- a/src/common/utils/PdfExport/PdfExport.css
+++ b/src/common/utils/PdfExport/PdfExport.css
@@ -8,6 +8,7 @@
   border-radius: 20px;
   box-shadow: 1px 1px 0 0 rgb(1, 165, 146);
   transition: all 0.3s;
+  animation: fadeIn ease 2s;
 }
 
 .printIcon:hover {
@@ -25,5 +26,14 @@
 @media print {
   @page {
     size: A4 Potrait;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
