--- a/src/common/utils/PdfExport/PdfExport.css
+++ b/src/common/utils/PdfExport/PdfExport.css
@@ -1,10 +1,10 @@
 .printIcon {
   position: absolute;
-  bottom: 52px;
-  right: 85px;
+  bottom: 9%;
+  right: 6%;
   padding: 5px;
   border: 1px solid silver;
-  background-color:rgb(241, 253, 255);
+  background-color: rgb(241, 253, 255);
   border-radius: 20px;
   box-shadow: 1px 1px 0 0 rgb(1, 165, 146);
   transition: all 0.3s;
@@ -13,7 +13,7 @@
 
 .printIcon:hover {
   cursor: pointer;
-  background-color:rgb(219, 245, 249);
+  background-color: rgb(219, 245, 249);
   box-shadow: 3px 3px 0 0 rgb(1, 165, 146);
 }
 
